--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
 
     </header>
-    <main >
+    <main  class="lg:mx-auto">
         <!-- main section -->
         <section class="flex flex-col lg:gap-2 lg:flex-row" >
 
