--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="flex flex-col lg:gap-2 lg:flex-row" >
 
             <!-- card items section -->
-            <div class="mx-14 mt-36 md:mx-52 lg:mx-10" >
+            <div class="mx-auto mt-36 md:mx-auto lg:mx-10" >
                 <h1 class="text-5xl text-bold text-center mb-8 lg:text-start">kitchenware</h1>
 
                 <!-- kitchenware section -->
@@ -220,12 +220,12 @@
 
             </div>
             <!-- cart section -->
-            <div  class=" mt-24 mx-8 md:mx-52 lg:mx-8 lg:mt-60">
+            <div  class=" mt-24 mx-auto md:mx-auto md:mx-52 lg:mx-8 lg:mt-60">
                 <!-- promo code section -->
                 <div class="border rounded-lg p-8 mb-12" >
                     <p class="text-2xl font-medium item-center">Have coupon?</p>
                     <input id="text-field" type="text" placeholder="Coupon code" class="border h-[40px] mt-4">
-                    <button id="coupon-button"  class="bg-[#E527B2] py-2 px-4 text-white rounded item-center" >Apply</button>
+                    <button id="coupon-button" disabled class="bg-[#E527B2] py-2 px-4 text-white rounded item-center" >Apply</button>
 
                 </div>
 
