--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <main  class="lg:mx-auto">
         <!-- main section -->
-        <section class="flex flex-col lg:gap-2 lg:flex-row" >
+        <section class="flex flex-col lg:gap-2 lg:flex-row lg:mx-auto" >
 
             <!-- card items section -->
             <div class="mx-auto mt-36 md:mx-auto lg:mx-10" >
