--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <!-- kitchenware section -->
                 <div>
-                <div class="grid gap-8 grid-cols-1  lg:grid-cols-3 ">
+                <div class="grid gap-8 grid-cols-1 md:grid-cols-2  lg:grid-cols-3 ">
                     <!-- kitchenware 1 -->
                     <div class="card w-80 shadow-xl" id="kitchen-1">
                         <figure class="px-10 pt-10 ">
@@ -102,7 +102,7 @@
 
                 <!-- sportsware section -->
                 <div>
-                    <div class="grid gap-8 grid-cols-1  lg:grid-cols-3 ">
+                    <div class="grid gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
                         <!-- Sportswear 1 -->
                         <div class="card w-80 shadow-xl" id="Sports-1">
                             <figure class="px-10 pt-10 ">
@@ -161,7 +161,7 @@
                     <h1 class="text-5xl mt-12 text-bold text-center mb-8 lg:text-start">Furniture</h1>
                     <!-- furniture section -->
                     <div>
-                        <div class="grid gap-8 grid-cols-1  lg:grid-cols-3 lg:mb-8 ">
+                        <div class="grid gap-8 grid-cols-1 md:grid-cols-2   lg:grid-cols-3 lg:mb-8 ">
                             <!-- Furniture 1 -->
                             <div class="card w-80 shadow-xl" id="Furniture-1">
                                 <figure class="px-10 pt-10 ">
